fixed dropdown spacing

--- a/nav.css
+++ b/nav.css
@@ -20,7 +20,7 @@ nav {
 }
 .nav-links {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 30%;
 }
 .nav-links li {
